// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[worker] emailValidation should handle a send link code email request 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "dynamicTemplateData": Object {
          "firstName": "John",
          "lastName": "Doe",
          "linkCode": "15",
        },
        "from": "john.sender@doe.co",
        "hideWarnings": true,
        "templateId": "dummy-link-account-id",
        "to": "john@doe.com",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": MailService {
        "MailService": [Function],
        "client": Client {
          "auth": "Bearer SG.dummy-api-key",
          "defaultHeaders": Object {
            "Accept": "application/json",
            "Content-Type": "application/json",
            "User-Agent": "sendgrid/7.2.0;nodejs",
          },
          "defaultRequest": Object {
            "baseUrl": "https://api.sendgrid.com/",
            "headers": Object {},
            "maxContentLength": Infinity,
            "method": "GET",
            "url": "",
          },
          "impersonateSubuser": "",
        },
        "secretRules": Array [],
        "send": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "dynamicTemplateData": Object {
                  "firstName": "John",
                  "lastName": "Doe",
                  "linkCode": "15",
                },
                "from": "john.sender@doe.co",
                "hideWarnings": true,
                "templateId": "dummy-link-account-id",
                "to": "john@doe.com",
              },
            ],
          ],
          "results": [Circular],
        },
        "substitutionWrappers": Array [
          "{{",
          "}}",
        ],
      },
    },
  ],
}
`;

exports[`[worker] emailValidation should handle a send validation email request 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "dynamicTemplateData": Object {
          "firstName": "John",
          "lastName": "Doe",
          "validationUrl": "http://localhost:3000?email=john%40doe.com&validationCode=42",
        },
        "from": "john.sender@doe.co",
        "hideWarnings": true,
        "templateId": "dummy-email-validation-id",
        "to": "john@doe.com",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": MailService {
        "MailService": [Function],
        "client": Client {
          "auth": "Bearer SG.dummy-api-key",
          "defaultHeaders": Object {
            "Accept": "application/json",
            "Content-Type": "application/json",
            "User-Agent": "sendgrid/7.4.1;nodejs",
          },
          "defaultRequest": Object {
            "baseUrl": "https://api.sendgrid.com/",
            "headers": Object {},
            "maxBodyLength": Infinity,
            "maxContentLength": Infinity,
            "method": "GET",
            "url": "",
          },
          "impersonateSubuser": "",
        },
        "secretRules": Array [],
        "send": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "dynamicTemplateData": Object {
                  "firstName": "John",
                  "lastName": "Doe",
                  "validationUrl": "http://localhost:3000?email=john%40doe.com&validationCode=42",
                },
                "from": "john.sender@doe.co",
                "hideWarnings": true,
                "templateId": "dummy-email-validation-id",
                "to": "john@doe.com",
              },
            ],
          ],
          "results": [Circular],
        },
        "substitutionWrappers": Array [
          "{{",
          "}}",
        ],
      },
    },
  ],
}
`;
